Align rejected free regressions with completed explanations